@@ -1,6 +1,8 @@
 Release 1.0.2 (in development)
 ==============================
 
+* #480: Fix handling of target naming in intersphinx.
+
 * #486: Fix removal of ``!`` for all cross-reference roles.
 
 
